--- a/index.html
+++ b/index.html
@@ -123,18 +123,20 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Academy Connect mission statement is “to enhance the students' capability by providing real-time work experience on the platform provided by software companies to prepare them for recent market trends”.
+              Academy Connect's mission statement is “to enhance the students' capability by providing real-time work experience on the platform provided by software companies to prepare them for recent market trends”.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Earning a certificate from well-known software companies</li>
-              <li><i class="ri-check-double-line"></i> Improve the teaching and learning methodology with the help of practical sessions from software industry</li>
-              <li><i class="ri-check-double-line"></i> Enrolling in multiple courses from the Academy to learn new skills sets as per the market trends</li>
+              <li><i class="ri-check-double-line"></i> Improve the teaching and learning methodology with the help of practical sessions from the software industry</li>
+              <li><i class="ri-check-double-line"></i> Enrolling in multiple courses from the Academy to learn new skill sets as per the market trends</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Academy connect vision statement is, “to enable the potential of a student at College of Computing and Information Technology, for working on well-known global software platforms, so as to make him ready for working ahead in the software industry”.
+              Academy Connect's vision statement is “to enable the potential of a student at the College of Computing and Information Technology to work on well-known global software platforms to prepare him for working ahead in the software industry”.
+            <img src="assets/img/about-video.jpg" class="img-fluid" alt="">              
             </p>
+            
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
         </div>
@@ -195,19 +197,17 @@
           <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Academies at the College of Computing and Information Technology .</h3>
             <p class="fst-italic">
-              The academies are inspired to give excellent courses and lab sessions for the undergraduate students in the College. The department focus to provide quality education and inspire students to earn more certificates from the academies. The main focus for the acadamies are:
+              The academies are inspired to give excellent courses and lab sessions for the undergraduate students in the College. The department focus to provide quality education and inspire students to earn more certificates from the academies. The main focus for the academies are:
             </p>
             <ul>
               <li><i class="bx bx-check-double"></i> Make students earn professional certificates for their future.</li>
               <li><i class="bx bx-check-double"></i> Acquire quality education with the international level designed certifications.</li>
               <li><i class="bx bx-check-double"></i> Become ready for the labor market to prove their worth in various computer sectors.</li>
-              <li><i class="bx bx-check-double"></i> Use the potential of the international connections to ensure high quality of teaching , learning and certification.</li>
+              <li><i class="bx bx-check-double"></i> Use the potential of international connections to ensure high quality of teaching, learning and certification.</li>
             </ul>
             <p>
-              The Colleg of Computing and Information Technology at Shaqra University is dedicated to provide the students excellent infrastructure and quality 
-              courses for the development of the students in various spheres of Computer Science. We are dedicated to improve the skills of the students that make them
-              ready for the labor market and compete with the global environment. The students acquire education and professional skills using our academic connects and earn 
-              international level certifications. 
+              The College of Computing and Information Technology at Shaqra University is dedicated to providing students with excellent infrastructure and quality 
+              courses for the development of students in various spheres of Computer Science. We are dedicated to improving the students' skills that prepare them for the labour market and compete with the global environment. The students acquire education and professional skills using our academic connections and earn international certifications. 
             </p>
           </div>
 
