--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
               Academy Connect's vision statement is “to enable the potential of a student at the College of Computing and Information Technology to work on well-known global software platforms to prepare him for working ahead in the software industry”.
-            <img src="assets/img/about-video.jpg" class="img-fluid" alt="">              
+            <img src="assets/img/statistics.jpg" class="img-fluid" alt="Statistics till Jan 2024">              
             </p>
             
             <a href="#" class="btn-learn-more">Learn More</a>
