--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-palette-line"></i></div>
-            <h4 class="title"><a href="">Cisco Academy</a></h4>
-            <p class="description">The CISCO Network Academy Connect with College of Computing and Information Technology provides a variety of courses for the students. </p>
+            <h4 class="title"><a href="">HUAWEI ICT Academy</a></h4>
+            <p class="description">The HUAWEI ICT Academy Connect with College of Computing and Information Technology provides a variety of courses for the students. </p>
           </div>
         </div>
 
@@ -852,13 +852,9 @@
                 <h4>Call:</h4>
                 <p>+966 11 647 5526</p>
               </div>
-
             </div>
-
           </div>
-
           <div class="col-lg-8 mt-5 mt-lg-0">
-
             <form action="https://script.google.com/macros/s/AKfycby8YHMvpmhgSMixo1q3BtmZnJzSG9BUv84xti2WON5lG3q2h7J1pFsXlXY3TLofBWdm/exec" method="post">
               <div class="row gy-2 gx-md-3">
                 <div class="col-md-6 form-group">
@@ -872,16 +868,11 @@
                 <div class="text-center col-12"><button type="submit">Send</button></div>
               </div>
             </form>
-
           </div>
-
         </div>
-
       </div>
     </section><!-- End Contact Section -->
-
   </main><!-- End #main -->
-
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
@@ -921,9 +912,6 @@
               <li><i class="bx bx-chevron-right"></i> <a href="https://edube.org/login">OpenEDG</a></li>
             </ul>
           </div>
-
-          
-
         </div>
       </div>
     </div>
@@ -935,11 +923,7 @@
           &copy; Copyright <strong><span>College of Computing and Information Technology</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/ -->
-          Designed by <a href="https://su.edu.sa/">Shaqra University, CCIT</a>
+        Designed by <a href="https://su.edu.sa/">Shaqra University, CCIT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
