--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
               Academy Connect's vision statement is “to enable the potential of a student at the College of Computing and Information Technology to work on well-known global software platforms to prepare him for working ahead in the software industry”.
-            <img src="assets/img/statistics.jpg" class="img-fluid" alt="Statistics till Jan 2024">              
+            <img src="assets/img/statistics.jpg" class="img-fluid" alt="Statistics till April 2025">              
             </p>
             
             <a href="#" class="btn-learn-more">Learn More</a>
@@ -152,28 +152,28 @@
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
               <p>Total Academies Connected</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="103" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="143" data-purecounter-duration="2" class="purecounter"></span>
               <p>Coures Hosted</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
               <p>Academies Running Years</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="2492" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3578" data-purecounter-duration="10" class="purecounter"></span>
               <p>Certificates Earned by Students</p>
             </div>
           </div>
@@ -197,7 +197,7 @@
           <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Academies at the College of Computing and Information Technology .</h3>
             <p class="fst-italic">
-              The academies are inspired to give excellent courses and lab sessions for the undergraduate students in the College. The department focus to provide quality education and inspire students to earn more certificates from the academies. The main focus for the academies are:
+              The academies are inspired to give excellent courses and lab sessions for the undergraduate students in the College. The department focuses on providing quality education and inspiring students to earn more certificates from the academies. The main focus for the academies are:
             </p>
             <ul>
               <li><i class="bx bx-check-double"></i> Make students earn professional certificates for their future.</li>
